--- a/documention/pages/home/tr/index.html
+++ b/documention/pages/home/tr/index.html
@@ -5,6 +5,10 @@
     <div class="content-body">
         Hoşgeldin!
 
-        <pre><code class="language-css" data-prism-lang="css">p { color: red }</code></pre>
+        <div data-prism-lang="css">
+            p {
+                color: black;
+            }
+        </div>
     </div>
 </div>
