--- a/documention/index.html
+++ b/documention/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Z-Framework Documention</title>
+    <title data-setLang="title"></title>
     <link rel="stylesheet" href="/assets/css/style.css">
-    
+
     <link rel="stylesheet" href="/assets/lib/highlight/styles/atom-one-dark.min.css">
     <script src="/assets/lib/highlight/highlight.min.js"></script>
 </head>
@@ -133,6 +133,7 @@
         <div id="root" right></div>
     </div>
 
+    <textarea id="copy-input" style="display: none;"></textarea>
     <script src="/assets/js/script.js"></script>
     <script src="/assets/js/router.js"></script>
 </body>
