Documention complete pages: model, route, view

--- a/documention/index.html
+++ b/documention/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="navbar">
         <div class="title">
-            <a data-route="home-index">Z-Framework</a>
+            <a data-route="home-index">Z-Framework <small style="color: gray;">v2.0.0</small></a>
         </div>
 
         <div class="menu">
@@ -51,6 +51,7 @@
                             <span data-setLang="2_1_model"></span>
                             <span data-setLang="2_2_model"></span>
                             <span data-setLang="2_3_model"></span>
+                            <span data-setLang="2_4_model"></span>
                         </li>
                     </ul>
                 </li>
