--- a/documention/pages/route/tr/index.html
+++ b/documention/pages/route/tr/index.html
@@ -1,6 +1,6 @@
 <div class="content">
     <div class="content-title">
-        1. Yönlendirici
+        1. Yönlendirici (Route)
     </div>
     <div class="content-body">
         <div class="separate">
