--- a/documention/index.html
+++ b/documention/index.html
@@ -128,6 +128,10 @@
                 <li data-to="run_project">
                     <span data-setLang="19_run_project"></span>
                 </li>
+
+                <li data-to="ws">
+                    <span>Web Socket</span>
+                </li>
             </ul>
         </div>
 
