--- a/error-handler-design/index.html
+++ b/error-handler-design/index.html
@@ -78,7 +78,7 @@
                 <div class="row">
                     <div class="col-4 border-end pe-0">
                         <div>
-                            <div class="p-2 w-100 text-break border">
+                            <div class="p-2 w-100 text-break border fw-bold">
                                 /home/ucrmanit/app.ucrm.com.tr/zFramework/Core/Facades/DB.php
                             </div>
                             <div class="list-group">
@@ -96,8 +96,7 @@
         </section>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"></script>
